--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ table a {
 table a:hover {
     text-decoration: underline;
 }
-        
+        </style>
     <pre>
         List of references 	
 Authors: Colloms Martin, Darlington Paul.
