--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
             There are various benefits for the speaker enclosure each allowing for different characteristics from other speaker enclosures. 
             One characteristic of transmission line speakers is that they act as an acoustic waveguide, this means that the casing is capable
             of guiding and controlling passively the waves radiated out of the speaker, this is useful as manufacturers can more precisely control 
-            and manage the sound produced by the speaker. This is especially used in the lower frequencies (Colloms Martin, Darlington Paul. 2005). 
+            and manage the sound produced by the speaker. This is especially used in the lower frequencies (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+            Colloms Martin, Darlington Paul. 2005</a>). 
         </pre>
     </p>
     <!-- Image under Introduction -->
@@ -168,7 +169,8 @@
     <p class="ex4">
         <pre>
             The idea of this design is that a normal bass driver/speaker can produce frequencies which before would have been covered
-            by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz). This is done by delaying the
+            by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+            Colloms Martin, Darlington Paul. 2005</a>). This is done by delaying the
             sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
             with the front wave.
         </pre>
@@ -198,7 +200,8 @@
 <p class="ex6">
     <pre>
         The length of the transmission line is calculated based on resonance. This means the length is set to the fundamental frequency
-        of the loudspeaker, designers will normally use a length which is 1/2y of that. This is because the sound produced out the
+        of the loudspeaker, designers will normally use a length which is 1/2y of that(<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+            Colloms Martin, Darlington Paul. 2005</a>). This is because the sound produced out the
         rear side of the speaker is exactly 180 degrees out of phase therefore a completely destructive wave to the outputted sound. As the
         tl shifts the wave 180 degrees back it is now completely in phase. Now that it’s in phase and tuned to the fundamental frequency
         there is an increase in resonance of wanted frequencies increasing the output level of our wanted bass. This is like someone on
