--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 <p class="ex5">
     <pre>
         The tl line speaker insides normally consist of a folded pathway which incorporates dampening or absorbent material this 
-        is used to remove unwanted resonances which would interfere otherwise with the produced sound (Newell Philip Richard, 
-        Holland Keith. 2007). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
+        is used to remove unwanted resonances which would interfere otherwise with the produced sound (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
         to high-frequency sound waves. Furthermore, the padding used must reduce reflections inside the cabinet and the design of
         the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (Hessam Alavi, 2016). This means
         that the sound produced at the exit of the labyrinth is the wanted low frequencies. The tl lines work as acoustic waveguides
@@ -205,7 +205,8 @@
         rear side of the speaker is exactly 180 degrees out of phase therefore a completely destructive wave to the outputted sound. As the
         tl shifts the wave 180 degrees back it is now completely in phase. Now that it’s in phase and tuned to the fundamental frequency
         there is an increase in resonance of wanted frequencies increasing the output level of our wanted bass. This is like someone on
-        a swing, to make the swing move higher (increase the amplitude) you need to swing your legs at the right speed/ frequency, in
+        a swing, to make the swing move higher (increase the amplitude<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>) you need to swing your legs at the right speed/ frequency, in
         other words, the fundamental frequency of that system. Otherwise, you find yourself not increasing your height or by swinging out
         of phase (e.g. legs out whilst going backwards) you reduce your height. This is the same as transmission line speakers. 
     </pre>
@@ -214,13 +215,14 @@
 <p class="ex7">
     <pre>
         To compare the difference between the transmission line and normal ported or enclosed speaker designs we use something called frequency 
-        responsiveness which is the amplitude in decibels (dB) for a given frequency (Newell Philip Richard, Holland Keith. 2007). Here I will
+        responsiveness which is the amplitude in decibels (dB) for a given frequency (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>). Here I will
         show the difference between types of speakers and the difference between the port of the TL and the driver.
     </pre>
      <figure>
     <img src="TL_measurement.jpg" alt="Tl measurement" style="max-width: 100%; height: auto; width: 700px;">
-    <figcaption>Figure 3: this diagram shows the sound frequency at the port (solid line) and the driver (dotted) Newell Philip Richard, 
-        Holland Keith.2007
+    <figcaption>Figure 3: this diagram shows the sound frequency at the port (solid line) and the driver (dotted) <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>
     </figcaption>
     </figure>
         <pre>
