--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     <!-- Image under Introduction -->
     <figure>
         <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
-        <figcaption>Figure 1: the transmission of waves through a waveguide. Hejie Lin, Turgay Bengisu & Zissimos P.
-            Mourelatos, 2022.
+        <figcaption>Figure 1: the transmission of waves through a waveguide.<a href="https://link.springer.com/chapter/10.1007/978-3-030-88213-6_8 ">
+            Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.</a>
         </figcaption>
     </figure>
     <p class="ex3">
@@ -183,7 +183,8 @@
         is used to remove unwanted resonances which would interfere otherwise with the produced sound (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
             Newell Philip Richard, Holland Keith. 2007</a>). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
         to high-frequency sound waves. Furthermore, the padding used must reduce reflections inside the cabinet and the design of
-        the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (Hessam Alavi, 2016). This means
+        the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (<a href="https://www.semanticscholar.org/paper/High-end-3-way-speakers-based-on-transmission-line-Natkaniec/210e172b78ff7a39906bc9399be4e2e98035c7c7">
+            Hessam Alavi, 2016)</a>. This means
         that the sound produced at the exit of the labyrinth is the wanted low frequencies. The tl lines work as acoustic waveguides
         where the length of the pathway is calculated based on factors of the speaker itself. The tl line works as an acoustic 
         waveguide making sure the sound waves released at the open end are in phase with the sound waves produced by the front 
@@ -193,7 +194,8 @@
     <figure>
     <img src="soundabsorbtion2.png" alt="Sound Absorbtion" style="max-width: 100%; height: auto; width: 800px;">
     <figcaption>Figure 2: This figure shows how the size of cells in a polymer matrix affects sound absorption. 
-        Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.
+       <a href="https://www.researchgate.net/publication/325614788_Porous_materials_for_sound_absorption">
+           Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.</a>
     </figcaption>
     </figure>
         <h6 id="The Design Of the Transmission Line Speakers">The Design Of the Transmission Line Speakers</h6>
@@ -293,6 +295,12 @@ Title: <a href="https://link.springer.com/chapter/10.1007/978-3-030-88213-6_8 ">
 Creator: H Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos
 Publisher: Springer, cham 
 Creation date: 2022
+
+Title: <a href="https://www.researchgate.net/publication/325614788_Porous_materials_for_sound_absorption">
+porous materials for sound absorption</a>
+Creator: Leitao Cao , Qiuxia Fu , Yang Si , Bin Ding , Jianyong Yu
+Publisher: Innovation Centre for Textile Science and Technology, Donghua University, Shanghai 200051, China
+Creation date: 2018
 
  
     </pre>
