--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ Creation date: 2018
     
    <script>
     // array of slide images
-    var slideimages = ["Slide1.png", "Slide2.png", "Slide3.png", "Slide4.png", "Slide5.png"];
+    var slideimages = ["title.png", "Slide2.png", "Slide3.png", "Slide4.png", "Slide5.png"];
     var currentslide = 0;
 
     function showslide() {
