--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Creation date: 2018
     <h9> Conference presentation: How do transmission line speakers work </h9>
 
     <div id="slide-container">
-        <img id="slide" src="Slide1.png" alt="slide 1" style="width:100%; max-width: 1000px">
+        <img id="slide" src="title.png" alt="slide 1" style="width:100%; max-width: 1000px">
 
         <div class="button-container">
             <button class="button" onclick="prevslide()">previous</button>
