--- a/index.html
+++ b/index.html
@@ -146,13 +146,15 @@
             There are various benefits for the speaker enclosure each allowing for different characteristics from other speaker enclosures. 
             One characteristic of transmission line speakers is that they act as an acoustic waveguide, this means that the casing is capable
             of guiding and controlling passively the waves radiated out of the speaker, this is useful as manufacturers can more precisely control 
-            and manage the sound produced by the speaker. This is especially used in the lower frequencies (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">Colloms Martin, Darlington Paul. 2005</a>). 
+            and manage the sound produced by the speaker. This is especially used in the lower frequencies (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+                Colloms Martin, Darlington Paul. 2005</a>). 
         </pre>
     </p>
     <!-- Image under Introduction -->
     <figure>
         <img src="acoustic waveguide.png" alt="Introduction Image" style="max-width: 100%; height: auto; width: 1000px;">
-        <figcaption>Figure 1: the transmission of waves through a waveguide.<a href="https://link.springer.com/chapter/10.1007/978-3-030-88213-6_8 ">Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.</a>
+        <figcaption>Figure 1: the transmission of waves through a waveguide.<a href="https://link.springer.com/chapter/10.1007/978-3-030-88213-6_8 ">
+            Hejie Lin, Turgay Bengisu & Zissimos P. Mourelatos, 2022.</a>
         </figcaption>
     </figure>
     <p class="ex3">
@@ -167,7 +169,8 @@
     <p class="ex4">
         <pre>
             The idea of this design is that a normal bass driver/speaker can produce frequencies which before would have been covered
-            by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">Colloms Martin, Darlington Paul. 2005</a>). This is done by delaying the
+            by an external subwoofer. These frequencies can even go down to the infrasonic range (<17hz <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+                Colloms Martin, Darlington Paul. 2005</a>). This is done by delaying the
             sound produced out the rear side of the driver and porting it out of the speaker enclosure when the wave is in phase 
             with the front wave.
         </pre>
@@ -177,9 +180,11 @@
 <p class="ex5">
     <pre>
         The tl line speaker insides normally consist of a folded pathway which incorporates dampening or absorbent material this 
-        is used to remove unwanted resonances which would interfere otherwise with the produced sound (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">Newell Philip Richard, Holland Keith. 2007</a>). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
+        is used to remove unwanted resonances which would interfere otherwise with the produced sound (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>). Absorbent materials such as long wool are used, as these are good at reducing the energy of medium
         to high-frequency sound waves. Furthermore, the padding used must reduce reflections inside the cabinet and the design of
-        the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (<a href="https://www.semanticscholar.org/paper/High-end-3-way-speakers-based-on-transmission-line-Natkaniec/210e172b78ff7a39906bc9399be4e2e98035c7c7">Hessam Alavi, 2016)</a>. This means
+        the pathway further helps this by incorporating tapered walls and reflectors at 45 degrees (<a href="https://www.semanticscholar.org/paper/High-end-3-way-speakers-based-on-transmission-line-Natkaniec/210e172b78ff7a39906bc9399be4e2e98035c7c7">
+            Hessam Alavi, 2016)</a>. This means
         that the sound produced at the exit of the labyrinth is the wanted low frequencies. The tl lines work as acoustic waveguides
         where the length of the pathway is calculated based on factors of the speaker itself. The tl line works as an acoustic 
         waveguide making sure the sound waves released at the open end are in phase with the sound waves produced by the front 
@@ -189,18 +194,21 @@
     <figure>
     <img src="soundabsorbtion2.png" alt="Sound Absorbtion" style="max-width: 100%; height: auto; width: 800px;">
     <figcaption>Figure 2: This figure shows how the size of cells in a polymer matrix affects sound absorption. 
-       <a href="https://www.researchgate.net/publication/325614788_Porous_materials_for_sound_absorption">Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.</a>
+       <a href="https://www.researchgate.net/publication/325614788_Porous_materials_for_sound_absorption">
+           Leitao Cao, Qiuxia Fu, Yang Si, Bin Ding, Jianyong Yu 2018.</a>
     </figcaption>
     </figure>
         <h6 id="The Design Of the Transmission Line Speakers">The Design Of the Transmission Line Speakers</h6>
 <p class="ex6">
     <pre>
         The length of the transmission line is calculated based on resonance. This means the length is set to the fundamental frequency
-        of the loudspeaker, designers will normally use a length which is 1/2y of that(<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">Colloms Martin, Darlington Paul. 2005</a>). This is because the sound produced out the
+        of the loudspeaker, designers will normally use a length which is 1/2y of that(<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma99279132602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&isFrbr=true&tab=Everything&query=any,contains,martin%20colloms&sortby=date_d&facet=frbrgroupid,include,9037408025342224620&offset=0High performance loudspeakers">
+            Colloms Martin, Darlington Paul. 2005</a>). This is because the sound produced out the
         rear side of the speaker is exactly 180 degrees out of phase therefore a completely destructive wave to the outputted sound. As the
         tl shifts the wave 180 degrees back it is now completely in phase. Now that it’s in phase and tuned to the fundamental frequency
         there is an increase in resonance of wanted frequencies increasing the output level of our wanted bass. This is like someone on
-        a swing, to make the swing move higher (increase the amplitude<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">Newell Philip Richard, Holland Keith. 2007</a>) you need to swing your legs at the right speed/ frequency, in
+        a swing, to make the swing move higher (increase the amplitude<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>) you need to swing your legs at the right speed/ frequency, in
         other words, the fundamental frequency of that system. Otherwise, you find yourself not increasing your height or by swinging out
         of phase (e.g. legs out whilst going backwards) you reduce your height. This is the same as transmission line speakers. 
     </pre>
@@ -209,12 +217,14 @@
 <p class="ex7">
     <pre>
         To compare the difference between the transmission line and normal ported or enclosed speaker designs we use something called frequency 
-        responsiveness which is the amplitude in decibels (dB) for a given frequency (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">Newell Philip Richard, Holland Keith. 2007</a>). Here I will
+        responsiveness which is the amplitude in decibels (dB) for a given frequency (<a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+            Newell Philip Richard, Holland Keith. 2007</a>). Here I will
         show the difference between types of speakers and the difference between the port of the TL and the driver.
     </pre>
      <figure>
     <img src="TL_measurement.jpg" alt="Tl measurement" style="max-width: 100%; height: auto; width: 700px;">
-    <figcaption>Figure 3: this diagram shows the sound frequency at the port (solid line) and the driver (dotted) <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">Newell Philip Richard, Holland Keith. 2007</a>
+    <figcaption>Figure 3: this diagram shows the sound frequency at the port (solid line) and the driver (dotted) <a href="https://surrey.primo.exlibrisgroup.com/discovery/fulldisplay?docid=alma9952593602346&context=L&vid=44SUR_INST:44SUR_VU1&lang=en&search_scope=MyInst_andCI_ResearchOnlyInventory&adaptor=Local%20Search%20Engine&tab=Everything&query=any,contains,Newell%20Philip%20Richard,%20Holland%20Keith">
+        Newell Philip Richard, Holland Keith. 2007</a>
     </figcaption>
     </figure>
         <pre>
